# gem-kg

./: Dockerfile.agent_app  Dockerfile.unstructured  README.md  app.py  crew_logic.py  docker-compose.yml  pyproject.toml  unstructured_requirements.txt  unstructured_service.py
crew_tools/: chunking_tools.py  graph_visualization_tool.py  ingestion_tools.py  query_tools.py
